syntax = "proto3";

package com.chitchat.grpc;

option java_multiple_files = true;
option java_package = "com.chitchat.grpc.service";

message EmptyResponse {
}

service MessageService {
  rpc PushMessage (MessageRequest) returns (EmptyResponse);
  rpc PullMessages (MessageIdsRequest) returns (MessagesResponse);
  rpc FetchDifference (MessageIdsRequest) returns (MessageIdsResponse);
}

message MessageRequest {
  int64 id = 1;
  string sender = 2;
  int64 send_time = 3;
  string content = 4;
  string receiver = 5;
}

message MessageResponse {
  int64 id = 1;
  string sender = 2;
  int64 send_time = 3;
  string content = 4;
  string receiver = 5;
}

message MessagesResponse {
  repeated MessageResponse messages = 1;
}

message MessageIdsRequest {
  repeated int64 ids = 1;
}

message MessageIdsResponse {
  repeated int64 ids = 1;
}
